welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: unclosed character literal
while (x!=''{
          ^BDRBuggle:5: error: ')' expected but something found.
while (x!=''{
          ^